...
class UserProfile {
  final String name;
  final String greeting;
  final String avatarUrl;

  const UserProfile({
    this.name = 'Jagadeesh',
    this.greeting = 'Good Afternoon',
    this.avatarUrl = '',
  });
}

class LocationInfo {
...
